--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,9 @@
    <!-- /HEADER -->
 
    <!-- PAGE-CONTENT -->
-   <div class="page-content">
+   <main class="page-content">
 
-   </div>
+   </main>
    <!-- /PAGE-CONTENT -->
 
    <!-- FOOTER -->
