--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
    <meta name="theme-color" content="#000">
    <!-- Custom Browsers Color End -->
 
-   <link rel="stylesheet" href="css/main.min.css">
+   <link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
