--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 <div class="wrapper">
 
    <!-- HEADER -->
-   <header class="header">
+   <header class="page-header">
 
    </header>
    <!-- /HEADER -->
@@ -47,7 +47,7 @@
    <!-- /PAGE-CONTENT -->
 
    <!-- FOOTER -->
-   <footer class="footer">
+   <footer class="page-footer">
 
    </footer>
    <!-- /FOOTER -->
