--- a/app/index.html
+++ b/app/index.html
@@ -32,28 +32,29 @@
 </head>
 
 <body>
+<!-- .wrapper -->
 <div class="wrapper">
 
-   <!-- HEADER -->
+   <!-- .page-header -->
    <header class="page-header">
 
    </header>
-   <!-- /HEADER -->
+   <!-- /.page-header -->
 
-   <!-- PAGE-CONTENT -->
+   <!-- page-content -->
    <main class="page-content">
 
    </main>
-   <!-- /PAGE-CONTENT -->
+   <!-- /.page-content -->
 
-   <!-- FOOTER -->
+   <!-- .page-footer -->
    <footer class="page-footer">
 
    </footer>
-   <!-- /FOOTER -->
+   <!-- /.page-footer -->
 
 </div>
-<!-- /WRAPPER -->
+<!-- /.wrapper -->
 
 
 <!-- SCRIPTS -->
