fix favicon path

--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
    <script src="libs/html5shiv/html5shiv.min.js"></script>
    <![endif]-->
 
-   <link rel="icon" href="img/icons/favicon.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png">
+   <link rel="icon" href="img/dist/icons/favicon.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="img/dist/icons/apple-touch-icon-180x180.png">
    <!-- Template Basic Images End -->
 
    <!-- Custom Browsers Color Start -->
