--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <!-- <_base href="/"> -->
 
-   <title>New Life</title>
+   <title>Start HTML</title>
    <meta name="description" content="">
 
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,18 +16,18 @@
    <meta property="og:image" content="path/to/image.jpg">
 
    <!--[if lt IE 9]>
-   <script src="libs/html5shiv/html5shiv.min.js"></script>
+   <script src="./libs/html5shiv/html5shiv.min.js"></script>
    <![endif]-->
 
-   <link rel="icon" href="img/icons/favicon/favicon.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="img/icons/favicon/apple-touch-icon-180x180.png">
+   <link rel="icon" href="./img/icons/favicon/favicon.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/favicon/apple-touch-icon-180x180.png">
    <!-- Template Basic Images End -->
 
    <!-- Custom Browsers Color Start -->
    <meta name="theme-color" content="#000">
    <!-- Custom Browsers Color End -->
 
-   <link rel="stylesheet" href="css/style.min.css">
+   <link rel="stylesheet" href="./css/style.min.css">
 
 </head>
 
@@ -58,7 +58,7 @@
 
 
 <!-- SCRIPTS -->
-<script src="js/scripts.min.js"></script>
+<script src="./js/scripts.min.js"></script>
 
 </body>
 </html>
