remove child folder into img

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <!-- <_base href="/"> -->
 
-   <title>Start HTML</title>
+   <title>Разработка сайтов | DevAndreyIlin</title>
    <meta name="description" content="">
 
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
    <![endif]-->
 
    <link rel="icon" href="./img/icons/favicon/favicon.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/favicon/apple-touch-icon-180x180.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/favicon/fav-icon180x180.png">
    <!-- Template Basic Images End -->
 
    <!-- Custom Browsers Color Start -->
@@ -37,7 +37,7 @@
 
    <!-- .page-header -->
    <header class="page-header">
-
+1
    </header>
    <!-- /.page-header -->
 
