--- a/app/index.html
+++ b/app/index.html
@@ -36,19 +36,19 @@
 <div class="wrapper">
 
    <!-- .page-header -->
-   <header class="page-header">
+   <header id="page-header" class="page-header">
       
    </header>
    <!-- /.page-header -->
 
    <!-- page-content -->
-   <main class="page-content">
+   <main id="page-content" class="page-content">
 
    </main>
    <!-- /.page-content -->
 
    <!-- .page-footer -->
-   <footer class="page-footer">
+   <footer id="page-footer" class="page-footer">
 
    </footer>
    <!-- /.page-footer -->
