add defer to js

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 
 
 <!-- SCRIPTS -->
-<script src="./js/scripts.min.js"></script>
+<script src="./js/scripts.min.js" defer></script>
 
 </body>
 </html>
